# old-country

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  import.py  pyproject.toml
.github/workflows/: format.yaml  lint.yaml  test.yaml
old_country/: dummy.py
tests/: test_dummy.py
