[project]
name = "old-country"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.6",
    "taskipy>=1.14.1",
]

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-ra -v -W error"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
    "old_country"
]

[tool.coverage.report]
skip_empty = true

[tool.ruff]
target-version = "py313"
line-length = 80
select = [
    "ALL"
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "D104"
]
"tests/*.py" = [
    "S101"
]

[tool.taskipy.tasks]
format-check = { cmd = "isort -c . && black --check . && ruff check .", help = "Check for formatting issues" }
format = { cmd = "isort . && black . && ruff check --fix .", help = "Fix formatting issues" }
lint-check = { cmd = "flake8 && mypy . && ruff check .", help = "Check for lint issues" }
test = { cmd = "python -m pytest --cov", help = "Run all unit tests" }
